# lessweb

./: .gitignore  LICENSE.txt  README.md  changelog.md  mypy.ini  pyproject.toml  setup.py  test_scan_import.py
.github/workflows/: python-package.yml
example/: .env  .env.production  .env.staging  .env.testci  .gitignore  .gitlab-ci.yml  .pyway.conf  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
example/.claude/: CLAUDE.md
example/config/: auth_gateway.toml  bullmq.toml  jwt_gateway.toml  lessweb.toml  mysql.toml  redis.production.toml  redis.toml  wxwork_alarm.toml
example/docs/: commondao_readme.md  commondao_reference.md  lessweb_openapi.md  lessweb_quickstart.md  lessweb_reference.md
example/migration/: V01_01_01__create_init_tables.sql  V01_01_01__init_tables.sql
example/openapi/: openapi.json
example/shared/: bullmq_plugin.py  error_middleware.py  jwt_gateway.py  lessweb_commondao.py
example/shared/auth_gateway/: auth_gateway.py
example/shared/redis/: redis_plugin.py
example/shared/wxwork_alarm/: wxwork_alarm.py
example/src/: examples.md
example/src/controller/: admin_controller.py  user_controller.py
example/src/entity/: admin.py  user.py
example/src/processor/: monitor_processor.py  send_alarm.py
example/src/service/: auth_service.py
example/tests/e2e/: test_admin_controller.py
examples/: how-does-pydantic-work.md  how-to-configure.md
examples/100_hello_world/: index.py
examples/100_hello_world_config/: config.toml  index.py
examples/101_endpoint/: index.py
examples/101_handle_request/: index.py
examples/102_response/: index.py
examples/103_get_request/: index.py
examples/205_mysql_crud/: config.toml  index.py
examples/205_mysql_crud/myapp/: mapper.py
examples/205_mysql_crud/myapp/endpoint/: create_pet.py  get_pet_detail.py  get_pet_total.py
examples/205_mysql_crud/schema/: pet.sql
examples/3001_bullmq/: bullmq_plugin.py  index.py  requirements.txt
examples/302_cookie/: index.py
examples/303_middleware/: index.py
examples/304_websocket/: index.py
examples/305_schedule_task/: index.py
lessweb/: __init__.py  annotation.py  bridge.py  event.py  ioc.py  typecast.py  utils.py
requirements/: base.txt  test.txt
tests/: test_bridge.py  test_ioc.py  test_typecast.py
tests/e2e/: test_event_emitter.py  test_request_stack.py
