[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lessweb"
version = "1.2.0"
description = 'A pythonic web framework'
readme = "README.md"
requires-python = ">=3.9"
keywords = ['lessweb', 'web', 'web.py', 'aiohttp']
authors = [
    {name = "qorzj", email = "goodhorsezxj@gmail.com"},
]
license = {text = "Apache 2"}
dependencies = [
    "aiohttp",
    "toml",
    "orjson",
    "lesscli",
    "typing_inspect",
]

[tool.setuptools.package-data]
"lessweb" = ["py.typed"]
