[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lessweb"
version = "1.5.1"
description = 'A pythonic web framework'
readme = "README.md"
requires-python = ">=3.9"
keywords = ['lessweb', 'web', 'web.py', 'aiohttp']
authors = [
    {name = "qorzj", email = "goodhorsezxj@gmail.com"},
]
license = {text = "Apache 2"}
dependencies = [
    "aiohttp",
    "toml",
    "orjson",
    "typing_inspect",
]

[project.optional-dependencies]
test = [
    "autopep8",
    "mypy",
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-aiohttp",
    "types-toml",
]

[tool.setuptools.package-data]
"lessweb" = ["py.typed"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true